# VEAF-SimpleForum

./: .dockerignore  .env.dist  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  main.py
app/models/: category.py  common.py  topic.py
app/routers/: api.py  web.py
app/services/: data_loader.py  search.py
app/static/css/: style.css
app/templates/: 404.html  base.html  category.html  index.html  search.html  topic.html
tests/: conftest.py
tests/e2e/: test_user_journeys.py
tests/integration/: test_api.py  test_web.py
tests/unit/: test_data_loader.py  test_models.py  test_search.py
